2010-10-31  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15830: Sprite - IRRE record synchronization icon missing (icon was missing)
	* Follow-up to #15745: Integrate generic notification methods to show windows and dialogs based on ExtJS
	* Follow-up to #15966: Enable debug mode in BE

2010-10-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #15306: [Caching framework] Add scheduler task to execute garbage collection

2010-10-29  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Updated Fluid version to 1.3.0alpha3

2010-10-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15551: [IRRE] Open all child records when opening parent records (Thanks to Sebastian Fischer)
	* Fixed bug #15042: Accessing BE in fresh install fails with "No database selected" (Thanks to Lars Peipmann)
	* Fixed bug #16140: [reports] PHP warning on missing array in reports system extension (Thanks to Rudi Meyer)
	* Added feature #16137: [em] Task to update extension list
	* Fixed bug #4272: Inconsistent return values of ini_get() produce false positives for safe_mode detection (Thanks to Peter Beernink)

2010-10-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16155: t3lib_db::INSERTquery misses a space when generering the INSERT INTO statement

2010-10-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15745: Integrate generic notification methods to show windows and dialogs based on ExtJS

2010-10-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16135: Output of superfluous "&qout;" in title of TCEform icon for record in group of type "db" (Thanks to Sven Juergens)

2010-10-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16148: htmlArea RTE: Missing cancel browser default after inserting character or emoticon

2010-10-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16122: Improve tooltip behaviour
	* Fixed bug #15094: Refactor of content objects of tslib_content

2010-10-27  Steffen Gebert  <steffen@steffen-gebert.de>
